<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/bottom_sheet_bg"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="220dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_room"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/etd_room"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:imeOptions="actionDone"
        android:background="@drawable/edt_bg"/>

    <CheckBox
        android:id="@+id/chk_live"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/is_live"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_gravity="end">

        <TextView
            android:id="@+id/cancel_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_bg"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"
            android:backgroundTint="@color/cancel_bt_color"/>

        <TextView
            android:id="@+id/create_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_bg"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/create"
            android:backgroundTint="@color/orange"/>

    </LinearLayout>


</LinearLayout>