<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/video_view_rl"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/feed_bg">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/video_camera"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:src="@drawable/play_button"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txtLive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/live_bg"
            android:textSize="10sp"
            android:layout_centerInParent="true"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/feed_gray"
        android:layout_below="@+id/video_view_rl"/>

    <TextView
        android:id="@+id/txtStopLive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_live"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/live_bg"
        android:textSize="12sp"
        android:layout_below="@+id/txtName"
        android:layout_centerInParent="true"
        android:textColor="@color/colorWhite" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/txtStopLive"
        android:layout_marginTop="5dp"
        android:background="@color/feed_gray"/>

</RelativeLayout>